2014-March-06 Struan Robertson

	* HinderedRotorQM1D.cpp: Minor changes in order to improve convergence.

	* MESMER manual.docx: Condition specification section (7.3.3) updated.

2014-March-19 Chris Morley

	* src/plugins/PriorDistribution.cpp: make co-fragment molecule during parse
	rather than during calculation - earlier error reporting.

	* MesmerQA/AcetylPrior/AcetylPrior.xml: minor format changes.

2014-March-17 Chris Morley

	* src/System.cpp: Allow attributes of <me:PTPair> and its sub-elements
	to be on the parent <me:PTs> to avoid much repetition. Allow multiple
	<me:PTs>s.

	* defaults.xml: Use the standard defaults method for the neglected <PTset>.

	* mesmer1.xsl, schemas/mesmer.xsd: consequent changes to schema and
	Firefox output.

	* src/main.cpp: log message to give the location of the Mesmer directory.
	It is changed in the Windows Installer via an environment variable.
	I could not understand why my changes to defaults.xml were having no effect.

2014-March-06 Struan Robertson

	* HinderedRotorQM1D.cpp: Further updates for angle dependent internal 
	rotation moment of inertia terms.

2014-March-02 Struan Robertson

	* HinderedRotorQM1D.cpp: Addition of angle dependent internal rotation 
	moment of inertia terms.

	* UnitTest.xml: updated to include ClOOCl example.

2014-March-01 Struan Robertson

	* HinderedRotorQM1D.cpp, HinderedRotorCM1D.cpp, HinderedRotorUtils.cpp/.h: 
	Changes to hindered rotor methods to allow the reading of kinetic energy 
	tensor components.

	* UnitTest.xml: updated to include HOOH example.

2014-March-01 Struan Robertson

	* MESMER manual.docx, System.h: Version changes.

	* Qa.bat, QA.sh: Updated to include AcetylPrior test.

2014-February-21 Robin Shannon

	* Examples\AcetylPrior: Example file added in order to demonstrate
        the prior distribution code

2014-February-16 Struan Robertson

	* MESMER manual.docx: Added content on examples, distribution plots and 
	convergent eigenvalues.
